making needed json files and making versions of html and css for Mahsa

--- a/Analysis_Mahsa.ipynb
+++ b/Analysis_Mahsa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33816f13",
+   "id": "8be7b20e",
    "metadata": {},
    "source": [
     "# Analysis\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "46537d5d",
+   "id": "d1bf3dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "767b97e5",
+   "id": "1720dd10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a8d1bb44",
+   "id": "2da9a526",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e49c7cc5",
+   "id": "c522ad85",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7b880e15",
+   "id": "b998527b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "569086fc",
+   "id": "d54b7f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a510b354",
+   "id": "95fefde8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6defb6f1",
+   "id": "60bd2c4c",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c0769482",
+   "id": "609b4e50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "287939e7",
+   "id": "cb354a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3c87fcdc",
+   "id": "b9136913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "b1792e62",
+   "id": "af6960c8",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c9655ddc",
+   "id": "5dae0d57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "d318cbd1",
+   "id": "3fbcaf1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0da79880",
+   "id": "3f5e408a",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "05b3be5f",
+   "id": "8c114236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "d299d68c",
+   "id": "755e8e95",
    "metadata": {},
    "outputs": [
     {
@@ -1117,8 +1117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "88f460f3",
+   "execution_count": 125,
+   "id": "7d103be9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,16 +1129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d73cdd1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 99,
-   "id": "e58fb917",
+   "id": "ef73b215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "27a5d3df",
+   "id": "ffa693af",
    "metadata": {},
    "outputs": [
     {
@@ -1464,8 +1456,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 121,
+   "id": "5ffca4a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "two = observ_two.to_json(orient=\"records\")\n",
+    "with open(\"./Resources/dateTwo.json\", \"w\") as outfile:\n",
+    "    outfile.write(two)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 105,
-   "id": "208755d4",
+   "id": "74b2b94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "d5d02965",
+   "id": "1f73f8be",
    "metadata": {},
    "outputs": [
     {
@@ -1916,8 +1920,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "id": "d2d01ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three = observ_three.to_json(orient=\"records\")\n",
+    "with open(\"./Resources/dateThree.json\", \"w\") as outfile:\n",
+    "    outfile.write(three)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 107,
-   "id": "94bcba2d",
+   "id": "64181a74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "698d30c2",
+   "id": "4d0b67f5",
    "metadata": {},
    "outputs": [
     {
@@ -2226,8 +2242,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 123,
+   "id": "d750af2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four = observ_four.to_json(orient=\"records\")\n",
+    "with open(\"./Resources/dateFour.json\", \"w\") as outfile:\n",
+    "    outfile.write(four)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
-   "id": "9b505c2e",
+   "id": "b4812774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2265,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "99558e31",
+   "id": "6cbcce52",
    "metadata": {},
    "outputs": [
     {
@@ -2642,8 +2670,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "id": "ee6a4f85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "five = observ_five.to_json(orient=\"records\")\n",
+    "with open(\"./Resources/dateFive.json\", \"w\") as outfile:\n",
+    "    outfile.write(five)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7a0ef267",
+   "id": "9b61f0ca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2651,7 +2691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b8ee612",
+   "id": "5be25c32",
    "metadata": {},
    "outputs": [],
    "source": []
