Reformated to js instead of json files for data. Easier for plotting

--- a/Analysis_Kalyn.ipynb
+++ b/Analysis_Kalyn.ipynb
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a60aaa3",
+   "id": "983908cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16f590ae",
+   "id": "31e9347a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bd9f22bf",
+   "id": "3a0cd4f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7294ae82",
+   "id": "117ac65c",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "19e9f72a",
+   "id": "885965c0",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0a6695a0",
+   "id": "23569a49",
    "metadata": {},
    "outputs": [
     {
@@ -1015,20 +1015,20 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "653a46ca",
+   "id": "7ec36c1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "city_shape_data = city_shape_date.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/cityshape.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/cityshape.js\", \"w\") as outfile:\n",
     "    outfile.write(city_shape_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "305764c9",
+   "id": "b7923747",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f1e91904",
+   "id": "7ac04fd0",
    "metadata": {},
    "outputs": [
     {
@@ -1072,14 +1072,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "babb4292",
+   "id": "5edf33df",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\3598493454.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\3598493454.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3d311058",
+   "id": "965db674",
    "metadata": {},
    "outputs": [
     {
@@ -1310,8 +1310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "33232e8d",
+   "execution_count": 19,
+   "id": "e0b96ecf",
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "6  rectangle            1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,21 +1406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "2e792b17",
+   "execution_count": 20,
+   "id": "30aa4937",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "first_years_shape = shapes1_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/firstyearsshape.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/firstyearsshape.js\", \"w\") as outfile:\n",
     "    outfile.write(first_years_shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6de39da5",
+   "execution_count": 21,
+   "id": "5988d553",
    "metadata": {
     "scrolled": false
    },
@@ -1429,7 +1429,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\1193259381.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\1193259381.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1715,7 +1715,7 @@
        "1713       us     light  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,8 +1729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d1bef958",
+   "execution_count": 22,
+   "id": "fa337648",
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1747,7 @@
        "Name: shape, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,8 +1760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "80f75dd8",
+   "execution_count": 23,
+   "id": "4c4011ef",
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
        "6      oval            1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,28 +1856,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "51462409",
+   "execution_count": 24,
+   "id": "17d539dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "tv_data = shapes2_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/tvdata.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/tvdata.js\", \"w\") as outfile:\n",
     "    outfile.write(tv_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "3ee9e3ee",
+   "execution_count": 25,
+   "id": "6a50ec77",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\2272608523.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\2272608523.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2023,7 +2023,7 @@
        "[120 rows x 5 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,8 +2037,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "f83c7df8",
+   "execution_count": 26,
+   "id": "076e6336",
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
        "Name: shape, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,8 +2073,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "75d43553",
+   "execution_count": 27,
+   "id": "fe41c37a",
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
        "11        egg            2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2199,28 +2199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "c1676d7f",
+   "execution_count": 28,
+   "id": "6a86b21f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "apollo_13 = shapes3_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/apollo13.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/apollo13.js\", \"w\") as outfile:\n",
     "    outfile.write(apollo_13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "2b33fddf",
+   "execution_count": 29,
+   "id": "6f4ccc58",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\256554822.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\256554822.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2379,7 +2379,7 @@
        "[217 rows x 5 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,8 +2393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "177e210a",
+   "execution_count": 30,
+   "id": "7bc78012",
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
        "Name: shape, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,8 +2436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "2bbb4b4d",
+   "execution_count": 31,
+   "id": "fe2811f4",
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
        "18       cone            1"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2604,28 +2604,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "1a50789f",
+   "execution_count": 32,
+   "id": "ff4fbcfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "new_hope = shapes4_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/newhope.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/newhope.js\", \"w\") as outfile:\n",
     "    outfile.write(new_hope)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "66b1dbd5",
+   "execution_count": 33,
+   "id": "c98c8e9e",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\3494035974.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\3494035974.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2771,7 +2771,7 @@
        "[3310 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,8 +2785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "0e8ed32f",
+   "execution_count": 34,
+   "id": "1466b887",
    "metadata": {},
    "outputs": [
     {
@@ -2817,7 +2817,7 @@
        "Name: shape, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,8 +2830,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "8c524d6c",
+   "execution_count": 35,
+   "id": "a6811dbf",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
        "20      cross           10"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,28 +3010,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "4bd96d68",
+   "execution_count": 36,
+   "id": "be70d252",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "privateship = shapes5_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/privateship.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/privateship.js\", \"w\") as outfile:\n",
     "    outfile.write(privateship)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "3071cc7f",
+   "execution_count": 37,
+   "id": "54506142",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_39768\\1895797853.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Kalyn\\AppData\\Local\\Temp\\ipykernel_49068\\1895797853.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3177,7 +3177,7 @@
        "[6908 rows x 5 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3191,8 +3191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "5380e533",
+   "execution_count": 38,
+   "id": "aaa25497",
    "metadata": {},
    "outputs": [
     {
@@ -3223,7 +3223,7 @@
        "Name: shape, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3236,8 +3236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8c9c58ac",
+   "execution_count": 39,
+   "id": "f5100cd2",
    "metadata": {},
    "outputs": [
     {
@@ -3400,7 +3400,7 @@
        "20       cone           26"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3416,21 +3416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "2eb98159",
+   "execution_count": 40,
+   "id": "dfce433a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "final_year = last_shapes_df.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/finalyear.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/finalyear.js\", \"w\") as outfile:\n",
     "    outfile.write(final_year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "eddf6626",
+   "execution_count": 41,
+   "id": "f82158c7",
    "metadata": {},
    "outputs": [
     {
@@ -3451,7 +3451,7 @@
        "Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3465,8 +3465,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "a8d4cdca",
+   "execution_count": 42,
+   "id": "14451538",
    "metadata": {},
    "outputs": [
     {
@@ -3572,7 +3572,7 @@
        "[83 rows x 2 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3586,21 +3586,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "84bf4c00",
+   "execution_count": 43,
+   "id": "b3376e56",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
     "yearly_sightings = sighting_per_year.to_json(orient=\"records\")\n",
-    "with open(\"./Resources/yearlysightings.json\", \"w\") as outfile:\n",
+    "with open(\"./Resources/yearlysightings.js\", \"w\") as outfile:\n",
     "    outfile.write(yearly_sightings)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920ebc38",
+   "id": "73ed0dbe",
    "metadata": {},
    "outputs": [],
    "source": []
