working on plots for html page

--- a/Analysis_Kalyn.ipynb
+++ b/Analysis_Kalyn.ipynb
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "983908cc",
+   "id": "e8c24bdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "31e9347a",
+   "id": "b7cd9b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3a0cd4f5",
+   "id": "c450eefc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "117ac65c",
+   "id": "2f8fed3d",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "885965c0",
+   "id": "8909c20b",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "23569a49",
+   "id": "de81de45",
    "metadata": {},
    "outputs": [
     {
@@ -1014,13 +1014,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7ec36c1a",
+   "execution_count": 44,
+   "id": "4a3224ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "shape\n",
+       "fireball    11\n",
+       "circle       6\n",
+       "light        3\n",
+       "unknown      3\n",
+       "other        2\n",
+       "sphere       2\n",
+       "changing     1\n",
+       "Name: shape, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape_most_active_date = city_shape_date['shape'].groupby(city_shape_date['shape']).count().sort_values(ascending=False).head(7)\n",
+    "shape_most_active_date "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8bd015dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Totals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fireball</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>circle</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>light</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>unknown</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>other</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>sphere</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>changing</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Shape  Totals\n",
+       "0  fireball      11\n",
+       "1    circle       6\n",
+       "2     light       3\n",
+       "3   unknown       3\n",
+       "4     other       2\n",
+       "5    sphere       2\n",
+       "6  changing       1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shape_most_active_date_df = pd.DataFrame(shape_most_active_date, columns=['shape'])\n",
+    "shape_most_active_date_df = shape_most_active_date_df.rename_axis('count')\n",
+    "shape_most_active_date_df = shape_most_active_date_df.reset_index()\n",
+    "shape_most_active_date_df.rename(columns={'count':'Shape', 'shape': 'Totals'}, inplace=True)\n",
+    "shape_most_active_date_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1e2bdbaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write data to file in json format\n",
-    "city_shape_data = city_shape_date.to_json(orient=\"records\")\n",
+    "city_shape_data = shape_most_active_date_df.to_json(orient=\"records\")\n",
     "with open(\"./Resources/cityshape.js\", \"w\") as outfile:\n",
     "    outfile.write(city_shape_data)"
    ]
@@ -1028,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b7923747",
+   "id": "bbd3252a",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7ac04fd0",
+   "id": "1fa89c5c",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5edf33df",
+   "id": "7f2d0e37",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "965db674",
+   "id": "9953f153",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e0b96ecf",
+   "id": "1fdb7e24",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "30aa4937",
+   "id": "5f0e9589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5988d553",
+   "id": "e416223b",
    "metadata": {
     "scrolled": false
    },
@@ -1730,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fa337648",
+   "id": "26a1fcee",
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4c4011ef",
+   "id": "8dbccaa8",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "17d539dd",
+   "id": "5766b633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1870,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6a50ec77",
+   "id": "d909d8e0",
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2163,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "076e6336",
+   "id": "5bca6d9c",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe41c37a",
+   "id": "2aa5938f",
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6a86b21f",
+   "id": "88ad8bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6f4ccc58",
+   "id": "14e3994f",
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2519,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7bc78012",
+   "id": "34f55b26",
    "metadata": {},
    "outputs": [
     {
@@ -2437,7 +2562,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fe2811f4",
+   "id": "c3296ae3",
    "metadata": {},
    "outputs": [
     {
@@ -2605,7 +2730,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ff4fbcfe",
+   "id": "9e63202a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2618,7 +2743,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c98c8e9e",
+   "id": "6f81021e",
    "metadata": {},
    "outputs": [
     {
@@ -2786,7 +2911,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1466b887",
+   "id": "e07d33ba",
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2956,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a6811dbf",
+   "id": "8438fdb2",
    "metadata": {},
    "outputs": [
     {
@@ -3011,7 +3136,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "be70d252",
+   "id": "9e497815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3024,7 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "54506142",
+   "id": "0dae2550",
    "metadata": {},
    "outputs": [
     {
@@ -3192,7 +3317,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "aaa25497",
+   "id": "03e2f85f",
    "metadata": {},
    "outputs": [
     {
@@ -3237,7 +3362,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f5100cd2",
+   "id": "ba2385d5",
    "metadata": {},
    "outputs": [
     {
@@ -3417,7 +3542,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "dfce433a",
+   "id": "2076923f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3430,7 +3555,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f82158c7",
+   "id": "b8327ded",
    "metadata": {},
    "outputs": [
     {
@@ -3466,7 +3591,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "14451538",
+   "id": "bfe1ad49",
    "metadata": {},
    "outputs": [
     {
@@ -3587,7 +3712,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b3376e56",
+   "id": "9143ef8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3600,7 +3725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ed0dbe",
+   "id": "af83e680",
    "metadata": {},
    "outputs": [],
    "source": []
